tests/compile_error/standalone_expr.xprshn
// Compile error: standalone expressions as statements
int a!
a = 5!
a + 1! // Standalone expression 